# gas-check

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/output/: human.rs
crates/libverify-gas/: Cargo.toml
crates/libverify-gas/src/: adapter.rs  auth.rs  evidence.rs  lib.rs  verify.rs
crates/libverify-gas/src/controls/: api_executable_access.rs  change_scope.rs  deployment_version_linkage.rs  description_quality.rs  edit_source_detection.rs  editor_count_audit.rs  external_library_audit.rs  gcp_project_linkage.rs  head_drift.rs  library_inventory.rs  manifest_integrity.rs  mod.rs  oauth_scope_minimization.rs  secret_scanning.rs  sharing_restriction.rs  stale_deployment.rs  trigger_audit.rs  util.rs  version_history_integrity.rs  version_hygiene.rs  webapp_access_control.rs
crates/libverify-gas/src/policies/: gas-default.rego
crates/libverify-secret-scan/: Cargo.toml
crates/libverify-secret-scan/src/: entropy.rs  lib.rs  rules.rs  scanner.rs
src/: main.rs
src/controls/: api_executable_access.rs  deployment_version_linkage.rs  description_quality.rs  editor_count_audit.rs  external_library_audit.rs  gcp_project_linkage.rs  head_drift.rs  library_inventory.rs  manifest_integrity.rs  mod.rs  oauth_scope_minimization.rs  sharing_restriction.rs  trigger_audit.rs  version_hygiene.rs  webapp_access_control.rs
src/gas/: adapter.rs  auth.rs  client.rs  config.rs  evidence.rs  mod.rs  types.rs  verify.rs
src/output/: human.rs
src/policies/: gas-default.rego  gas-strict.rego
