[package]
name = "gas-check"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HikaruEgashira/gas-check"
authors = ["Hikaru Egashira"]

[[bin]]
name = "gas-check"
path = "src/main.rs"

[dependencies]
libverify-core = "0.9"
libverify-policy = "0.9"
libverify-output = "0.9"
clap = { version = "4", features = ["derive"] }
colored = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"

[profile.release]
lto = true
strip = true
codegen-units = 1
