[package]
name = "libverify-gas"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HikaruEgashira/gas-check"
authors = ["Hikaru Egashira"]
description = "GAS governance controls for the libverify ecosystem"
keywords = ["gas", "google-apps-script", "verification", "governance"]
categories = ["development-tools"]

[dependencies]
libverify-core = "0.9"
libverify-policy = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
